--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -187,7 +187,7 @@
 }
 
 .brandChange  {
-   @apply p-1 text-sm -mb-1;
+   @apply p-1 text-sm -mb-[2px];
    background: $gradient-primary-transparent;
    backdrop-filter: blur(10px);
    @apply transition-all duration-300 ease-in;
